--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
+    "method-override": "^3.0.0",
     "mongoose": "^8.16.4",
     "mongoose-slug-updater": "^3.3.0"
   },
